src/test/ui/error-codes/E0069.stderr
error[E0069]: `return;` in a function whose return type is not `()`
  --> $DIR/E0069.rs:2:5
   |
LL | fn foo() -> u8 {
   |             -- expected `u8` because of this return type
LL |     return;
   |     ^^^^^^ return type is not `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0069`.
